# sukeban

./: Cargo.toml  README.md
sukeban-compat/: Cargo.toml
sukeban-compat/src/: lib.rs
sukeban-compat/src/osu/: beatmap_info.rs  favourites.rs  friends.rs  mod.rs  rating.rs  replay.rs  scores.rs  screenshot.rs  search.rs
sukeban-core/: Cargo.toml
sukeban-psql/: Cargo.toml
sukeban-types/: Cargo.toml
sukeban-types/src/: beatmap_request_form.rs  geolocation.rs  lib.rs  player.rs  ranked_status.rs  ruleset.rs
sukeban-types/src/privileges/: clan.rs  client.rs  mod.rs  user.rs
