[workspace]
resolver = "3"
members = [ "sukeban-compat","sukeban-core", "sukeban-psql", "sukeban-types"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["multipart"]}
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = "0.8.6"
tokio = "1.47.1"
